@@ -103,12 +103,14 @@ don't define this value."
   "Connection type SMTP connections.
 This may be either nil (possibly upgraded to STARTTLS if
 possible), or `starttls' (refuse to send if STARTTLS isn't
-available), or `plain' (never use STARTTLS).."
+available), or `plain' (never use STARTTLS), or `ssl' (to use
+TLS/SSL)."
   :version "24.1"
   :group 'smtpmail
   :type '(choice (const :tag "Possibly upgrade to STARTTLS" nil)
 		 (const :tag "Always use STARTTLS" starttls)
-		 (const :tag "Never use STARTTLS" plain)))
+		 (const :tag "Never use STARTTLS" plain)
+		 (const :tag "Use TLS/SSL" ssl)))
 
 (defcustom smtpmail-sendto-domain nil
   "Local domain name without a host name.
