@@ -1,3 +1,7 @@
+2012-01-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* mail/smtpmail.el (smtpmail-stream-type): Mention the `ssl' value.
+
 2012-01-03  Chong Yidong  <cyd@gnu.org>
 
 	* shell.el (shell-dynamic-complete-functions): Put
